Update API endpoint in generateResult function

--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
         function generateResult() {
                 roundCount++;
                 // Call your Python backend API
-                         fetch("http://anuj-production.up.railway.app/get_result")
+                         fetch("https://colour-bet.onrender.com")
                     .then(res => res.json())
                     .then(data => {
                         let result = data.result; // backend returns "red", "green" or "violet"
